--- a/src/components/nav/style.module.css
+++ b/src/components/nav/style.module.css
@@ -8,11 +8,12 @@
   width: 100%;
   height: 80px;
 }
-.container label{
-  display: block;
+.container .logoArea {
+	flex-grow: 1;
+}
+.container label {
   border-radius: 10px;
   height: 70px;
-  line-height: 70px;
   width: 300px;
   text-align: center;
   font-size: 36px;
